--- a/site2/index.html
+++ b/site2/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <script src="./js/noclick.js.ts"></script>
+    <script src="./js/noclick.js"></script>
     <title>De eenhoorn</title>
 </head>
 <body>
